# diceEM-dist

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
autograder/: Dockerfile
autograder/source/: run_autograder  run_tests.py
diceEM/: __init__.py  assignment.ipynb  assignment.py  test_assignment.py
